added marks to sidebar

--- a/production/imports/ui/pages/stream.html
+++ b/production/imports/ui/pages/stream.html
@@ -77,6 +77,8 @@
                             </div>
                         </div>
                     {{/ if}}
+                {{else}}
+                    <h2>There are no announcements today! :^)</h2>
                 {{/ each}}
             </div>
         </div>
