--- a/production/imports/ui/pages/firstTime.html
+++ b/production/imports/ui/pages/firstTime.html
@@ -42,8 +42,12 @@
                                         <input type="text" id="teachUser" placeholder="Student Number">
                                         <input type="password" id="teachPass" placeholder="Teach Assist Password">
                                         <input type="submit" class="btn btn-primary btn-lg btn-login mb-15" value="AUTHORIZE">
-                                        <span>No, I do not want to connect my Teach Assist, please <a href="" id="skipNext">skip</a></span>
                                     </form>
+                                    <div class="teachLoader" hidden>
+                                        <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
+                                        <span class="sr-only">Loading...</span>
+                                    </div>
+                                    <span>No, I do not want to connect my Teach Assist, please <a href="" id="skipNext">skip</a></span>
                                 </div>
                                 <div class="info-form" id="subscriptionEmail" hidden>
                                     <form id="newsletterEmailForm">
