--- a/production/imports/ui/pages/course.html
+++ b/production/imports/ui/pages/course.html
@@ -52,45 +52,47 @@
             </div>
             <div class="assessments">
                 <div class="row mb-30">
-                    <div class="col-md-6">
-                        <div class="assessment-body text-center">
-                            <div class="assessment-info">
-                                <h3>Binary Quiz</h3>
-                                <p>The student demonstrated great binary counting skillz.</p>
-                            </div>
-                            <div class="assessment-performance">
-                                <div class="performance-presenter" hidden>
-                                    <div class="close-presenter">
-                                        <i class="fa fa-2x fa-times"></i>
+                    {{#each assesment}}
+                        <div class="col-md-6">
+                            <div class="assessment-body text-center">
+                                <div class="assessment-info">
+                                    <h3>{{title}}</h3>
+                                    <p>{{feedback}}</p>
+                                </div>
+                                <div class="assessment-performance">
+                                    <div class="performance-presenter" hidden>
+                                        <div class="close-presenter">
+                                            <i class="fa fa-2x fa-times"></i>
+                                        </div>
+                                        <h4 class="presenter-section">Section Title</h4>
+                                        <h3>You got <span class="important">10</span> out of <span class="important">10</span></h3>
+                                        <h5 class="mb-30">Weight: 10</h5>
+                                        <h4 class="text-left">Insights:</h4>
+                                        <ul class="text-left">
+                                            <li>This is insight number 1</li>
+                                            <li>Your performance in this section caused your mark to rise by 2.1%</li>
+                                        </ul>
                                     </div>
-                                    <h4 class="presenter-section">Section Title</h4>
-                                    <h3>You got <span class="important">10</span> out of <span class="important">10</span></h3>
-                                    <h5 class="mb-30">Weight: 10</h5>
-                                    <h4 class="text-left">Insights:</h4>
-                                    <ul class="text-left">
-                                        <li>This is insight number 1</li>
-                                        <li>Your performance in this section caused your mark to rise by 2.1%</li>
-                                    </ul>
-                                </div>
-                                <div class="knowledge performance">
-                                    <div class="performance-progress" id="test1"></div>
-                                    <div class="general-info"><p>Knowledge - <span class="important">90%</span></p></div>
-                                </div>
-                                <div class="thinking performance">
-                                    <div class="performance-progress" id="test2"></div>
-                                    <div class="general-info"><p>Thinking - <span class="important">80%</span></p></div>
-                                </div>
-                                <div class="communication performance">
-                                    <div class="performance-progress" id="test3"></div>
-                                    <div class="general-info"><p>Communication - <span class="important">95%</span></p></div>
-                                </div>
-                                <div class="application performance">
-                                    <div class="performance-progress" id="test4"></div>
-                                    <div class="general-info"><p>Application - <span class="important">60%</span></p></div>
+                                    <div class="knowledge performance">
+                                        <div class="performance-progress" id="test1" data-progress="90%"></div>
+                                        <div class="general-info"><p>Knowledge - <span class="important">90%</span></p></div>
+                                    </div>
+                                    <div class="thinking performance">
+                                        <div class="performance-progress" id="test2"></div>
+                                        <div class="general-info"><p>Thinking - <span class="important">80%</span></p></div>
+                                    </div>
+                                    <div class="communication performance">
+                                        <div class="performance-progress" id="test3"></div>
+                                        <div class="general-info"><p>Communication - <span class="important">95%</span></p></div>
+                                    </div>
+                                    <div class="application performance">
+                                        <div class="performance-progress" id="test4"></div>
+                                        <div class="general-info"><p>Application - <span class="important">60%</span></p></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    {{/ each}}
                     <div class="col-md-6">
                         <div class="assessment-body text-center">
                             <div class="assessment-info">
@@ -125,86 +127,6 @@
                                 </div>
                                 <div class="application performance">
                                     <div class="performance-progress" id="test7"></div>
-                                    <div class="general-info"><p>Application - <span class="important">60%</span></p></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="assessment-body text-center">
-                            <div class="assessment-info">
-                                <h3>Binary Quiz</h3>
-                                <p>The student demonstrated great binary counting skillz.</p>
-                            </div>
-                            <div class="assessment-performance">
-                                <div class="performance-presenter" hidden>
-                                    <div class="close-presenter">
-                                        <i class="fa fa-2x fa-times"></i>
-                                    </div>
-                                    <h4 class="presenter-section">Section Title</h4>
-                                    <h3>You got <span class="important">10</span> out of <span class="important">10</span></h3>
-                                    <h5 class="mb-30">Weight: 10</h5>
-                                    <h4 class="text-left">Insights:</h4>
-                                    <ul class="text-left">
-                                        <li>This is insight number 1</li>
-                                        <li>Your performance in this section caused your mark to rise by 2.1%</li>
-                                    </ul>
-                                </div>
-                                <div class="knowledge performance">
-                                    <div class="performance-progress" id="test1"></div>
-                                    <div class="general-info"><p>Knowledge - <span class="important">90%</span></p></div>
-                                </div>
-                                <div class="thinking performance">
-                                    <div class="performance-progress" id="test2"></div>
-                                    <div class="general-info"><p>Thinking - <span class="important">80%</span></p></div>
-                                </div>
-                                <div class="communication performance">
-                                    <div class="performance-progress" id="test3"></div>
-                                    <div class="general-info"><p>Communication - <span class="important">95%</span></p></div>
-                                </div>
-                                <div class="application performance">
-                                    <div class="performance-progress" id="test4"></div>
-                                    <div class="general-info"><p>Application - <span class="important">60%</span></p></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="assessment-body text-center">
-                            <div class="assessment-info">
-                                <h3>Binary Quiz</h3>
-                                <p>The student demonstrated great binary counting skillz.</p>
-                            </div>
-                            <div class="assessment-performance">
-                                <div class="performance-presenter" hidden>
-                                    <div class="close-presenter">
-                                        <i class="fa fa-2x fa-times"></i>
-                                    </div>
-                                    <h4 class="presenter-section">Section Title</h4>
-                                    <h3>You got <span class="important">10</span> out of <span class="important">10</span></h3>
-                                    <h5 class="mb-30">Weight: 10</h5>
-                                    <h4 class="text-left">Insights:</h4>
-                                    <ul class="text-left">
-                                        <li>This is insight number 1</li>
-                                        <li>Your performance in this section caused your mark to rise by 2.1%</li>
-                                    </ul>
-                                </div>
-                                <div class="knowledge performance">
-                                    <div class="performance-progress" id="test1"></div>
-                                    <div class="general-info"><p>Knowledge - <span class="important">90%</span></p></div>
-                                </div>
-                                <div class="thinking performance">
-                                    <div class="performance-progress" id="test2"></div>
-                                    <div class="general-info"><p>Thinking - <span class="important">80%</span></p></div>
-                                </div>
-                                <div class="communication performance">
-                                    <div class="performance-progress" id="test3"></div>
-                                    <div class="general-info"><p>Communication - <span class="important">95%</span></p></div>
-                                </div>
-                                <div class="application performance">
-                                    <div class="performance-progress" id="test4"></div>
                                     <div class="general-info"><p>Application - <span class="important">60%</span></p></div>
                                 </div>
                             </div>
