pushing random stuff

--- a/production/imports/ui/pages/course.html
+++ b/production/imports/ui/pages/course.html
@@ -1,7 +1,7 @@
 <template name="course">
     {{> navigation oper="true"}}
     <div class="main post-body mb-60">
-        <div class="container-fluid center-wrapper course-header" style="background-image: url('img/test.jpg')">
+        <div class="container-fluid center-wrapper course-header" style="background-image: url('/img/test.jpg')">
             <div class="sections-container">
                 <div class="col-md-3 col-sm-6 mb-30">
                     <div class="section-card">
