--- a/production/imports/ui/pages/course.html
+++ b/production/imports/ui/pages/course.html
@@ -1,7 +1,7 @@
 <template name="course">
     {{> navigation oper="true"}}
     <div class="main post-body mb-60">
-        <div class="container-fluid center-wrapper course-header" style="background-image: url('/img/test.jpg')">
+        <div class="container-fluid center-wrapper course-header">
             <div class="sections-container">
                 <div class="col-md-3 col-sm-6 mb-30">
                     <div class="section-card">
@@ -51,8 +51,9 @@
                 </div>
             </div>
             <div class="assessments">
+                {{#each assessment}}
                 <div class="row mb-30">
-                    {{#each assesment}}
+                    {{#each this}}
                         <div class="col-md-6">
                             <div class="assessment-body text-center">
                                 <div class="assessment-info">
@@ -73,66 +74,56 @@
                                             <li>Your performance in this section caused your mark to rise by 2.1%</li>
                                         </ul>
                                     </div>
-                                    <div class="knowledge performance">
-                                        <div class="performance-progress" id="test1" data-progress="90%"></div>
-                                        <div class="general-info"><p>Knowledge - <span class="important">90%</span></p></div>
-                                    </div>
-                                    <div class="thinking performance">
-                                        <div class="performance-progress" id="test2"></div>
-                                        <div class="general-info"><p>Thinking - <span class="important">80%</span></p></div>
-                                    </div>
-                                    <div class="communication performance">
-                                        <div class="performance-progress" id="test3"></div>
-                                        <div class="general-info"><p>Communication - <span class="important">95%</span></p></div>
-                                    </div>
-                                    <div class="application performance">
-                                        <div class="performance-progress" id="test4"></div>
-                                        <div class="general-info"><p>Application - <span class="important">60%</span></p></div>
-                                    </div>
+                                    {{# with K}}
+                                        <div class="knowledge performance">
+                                            <div class="performance-progress" id="test1" data-progress="{{percentage}}"></div>
+                                            <div class="general-info"><p>Knowledge - <span class="important">{{percentage}}</span></p></div>
+                                        </div>
+                                    {{else}}
+                                        <div class="knowledge performance not-available">
+                                            <div class="performance-progress" data-progress="0"></div>
+                                            <div class="general-info"><p>Knowledge - <span class="important">No Marks Available</span></p></div>
+                                        </div>
+                                    {{/ with}}
+                                    {{# with T}}
+                                        <div class="thinking performance">
+                                            <div class="performance-progress" data-progress="{{percentage}}"></div>
+                                            <div class="general-info"><p>Thinking - <span class="important">{{percentage}}</span></p></div>
+                                        </div>
+                                    {{else}}
+                                        <div class="thinking performance not-available">
+                                            <div class="performance-progress" data-progress="0"></div>
+                                            <div class="general-info"><p>Thinking - <span class="important">No Marks Available</span></p></div>
+                                        </div>
+                                    {{/ with}}
+                                    {{# with C}}
+                                        <div class="communication performance">
+                                            <div class="performance-progress" data-progress="{{percentage}}"></div>
+                                            <div class="general-info"><p>Communication - <span class="important">{{percentage}}</span></p></div>
+                                        </div>
+                                    {{else}}
+                                        <div class="communication performance not-available">
+                                            <div class="performance-progress" data-progress="0"></div>
+                                            <div class="general-info"><p>Communication - <span class="important">No Marks Available</span></p></div>
+                                        </div>
+                                    {{/ with}}
+                                    {{# with A}}
+                                        <div class="application performance">
+                                            <div class="performance-progress" data-progress="{{percentage}}"></div>
+                                            <div class="general-info"><p>Application - <span class="important">{{percentage}}</span></p></div>
+                                        </div>
+                                    {{else}}
+                                        <div class="application performance not-available">
+                                            <div class="performance-progress" data-progress="0"></div>
+                                            <div class="general-info"><p>Application - <span class="important">No Marks Available</span></p></div>
+                                        </div>
+                                    {{/ with}}
                                 </div>
                             </div>
                         </div>
-                    {{/ each}}
-                    <div class="col-md-6">
-                        <div class="assessment-body text-center">
-                            <div class="assessment-info">
-                                <h3>Hardware Quiz</h3>
-                                <p>The student demonstrated extensive understanding in computer hardware.</p>
-                            </div>
-                            <div class="assessment-performance">
-                                <div class="performance-presenter" hidden>
-                                    <div class="close-presenter">
-                                        <i class="fa fa-2x fa-times"></i>
-                                    </div>
-                                    <h4 class="presenter-section">Section Title</h4>
-                                    <h3>You got <span class="important">10</span> out of <span class="important">10</span></h3>
-                                    <h5 class="mb-30">Weight: 10</h5>
-                                    <h4 class="text-left">Insights:</h4>
-                                    <ul class="text-left">
-                                        <li>This is insight number 1</li>
-                                        <li>Your performance in this section caused your mark to rise by 2.1%</li>
-                                    </ul>
-                                </div>
-                                <div class="knowledge performance">
-                                    <div class="performance-progress" id="test5"></div>
-                                    <div class="general-info"><p>Knowledge - <span class="important">90%</span></p></div>
-                                </div>
-                                <div class="thinking performance not-available">
-                                    <div class="performance-progress" id="test2"></div>
-                                    <div class="general-info"><p>Thinking - <span class="important">No Marks Avaliable</span></p></div>
-                                </div>
-                                <div class="communication performance">
-                                    <div class="performance-progress" id="test6"></div>
-                                    <div class="general-info"><p>Communication - <span class="important">95%</span></p></div>
-                                </div>
-                                <div class="application performance">
-                                    <div class="performance-progress" id="test7"></div>
-                                    <div class="general-info"><p>Application - <span class="important">60%</span></p></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    {{/each}}
                 </div>
+                {{/ each}}
             </div>
             <div class="insights">
                 <div class="row mb-30">
