serious responsive optimization

--- a/production/imports/ui/pages/login.html
+++ b/production/imports/ui/pages/login.html
@@ -3,14 +3,14 @@
         <div class="branding">
             <span class="life-brand">uhs.life</span>
         </div>
-        <div class="login-menu">
+        <div class="login-menu ">
             <ul class="login-menu-items">
-                <li><a href="http://google.ca">About</a></li>
-                <li><a href="http://google.ca">Help Center</a></li>
-                <li><a href="http://google.ca">Terms & Policies</a></li>
+                <li class="hidden-xs hidden-sm"><a href="http://google.ca" >About</a></li>
+                <li class="hidden-xs hidden-sm"><a href="http://google.ca">Help Center</a></li>
+                <li class="hidden-xs hidden-sm"><a href="http://google.ca">Terms & Policies</a></li>
             </ul>
         </div>
-        <div class="col-lg-8 jumbotron-area">
+        <div class="col-lg-8 col-md-8 jumbotron-area hidden-sm hidden-xs">
             <div class="information">
                 <h1 class="jumbotron-greeting">Welcome</h1>
                 <span class="jumbotron-title">Here are some important information</span>
@@ -19,10 +19,10 @@
                     ommodi consectetur doloremque eius enim neque nostrum, reprehenderit repudiandae. Ab aspernatur cumque dolore doloribus eaque fugit illo ipsam ipsum minima nam nisi odio officia omnis, quasi quisquam sunt totam vitae.
                     Adipisci alias aspernatur deleniti dolores exercitationem facilis illo ipsa laboriosam minima necessitatibus nemo nesciunt, non optio porro praesentium quae quia quos reiciendis sequi, soluta suscipit tempore tenetur ullam vero voluptas!
                 </p>
-                <a class="btn btn-lg btn-primary btn-white">Read More</a>
+                <a class="btn btn-lg btn-white">Read More</a>
             </div>
         </div>
-        <div class="col-lg-4 login-area">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 login-area">
             <div class="login-with-google">
                 <h1 class="mb-30">Login</h1>
                 <a class="btn btn-primary btn-lg btn-login ptb-30" id="googleLogin" href="">
