--- a/production/imports/ui/pages/course.html
+++ b/production/imports/ui/pages/course.html
@@ -3,38 +3,82 @@
     <div class="main post-body mb-60">
         <div class="container-fluid center-wrapper course-header">
             <div class="sections-container">
-                <div class="col-md-3 col-sm-6 mb-30">
-                    <div class="section-card">
-                        <canvas id="knowledgeChart" width="400" height="400"></canvas>
-                        <h3>Knowledge</h3>
+                {{# if isMobile}}
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 col-xs-6 mb-30">
+                            <div class="section-card">
+                                <canvas id="knowledgeChart" width="400" height="400"></canvas>
+                                <h3>Knowledge</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-6">
+                            <div class="section-card">
+                                <canvas id="thinkingChart"></canvas>
+                                <h3>Thinking</h3>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="section-card">
-                        <canvas id="thinkingChart"></canvas>
-                        <h3>Thinking</h3>
+                    <div class="row mb-15">
+                        <div class="col-md-3 col-sm-6 col-xs-6">
+                            <div class="section-card">
+                                <canvas id="communicationChart"></canvas>
+                                <h3>Communication</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-6">
+                            <div class="section-card">
+                                <canvas id="applicationChart"></canvas>
+                                <h3>Application</h3>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="section-card">
-                        <canvas id="communicationChart"></canvas>
-                        <h3>Communication</h3>
+                    <div class="row">
+                        <div class="col-md-12 col-sm-12 col-xs-12">
+                            <div class="section-card">
+                                <h2 class="performance-mark">30%</h2>
+                                <h3 class="mt-0">Culminating</h3>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="section-card">
-                        <canvas id="applicationChart"></canvas>
-                        <h3>Application</h3>
+                {{else}}
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 col-xs-6 mb-30">
+                            <div class="section-card">
+                                <canvas id="knowledgeChart" width="400" height="400"></canvas>
+                                <h3>Knowledge</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-6">
+                            <div class="section-card">
+                                <canvas id="thinkingChart"></canvas>
+                                <h3>Thinking</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-6">
+                            <div class="section-card">
+                                <canvas id="communicationChart"></canvas>
+                                <h3>Communication</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-6">
+                            <div class="section-card">
+                                <canvas id="applicationChart"></canvas>
+                                <h3>Application</h3>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-12 col-sm-12">
-                    <div class="section-card">
-                        <h2 class="performance-mark">30%</h2>
-                        <h3 class="mt-0">Culminating</h3>
+                    <div class="row">
+                        <div class="col-md-12 col-sm-12 col-xs-12">
+                            <div class="section-card">
+                                <h2 class="performance-mark">30%</h2>
+                                <h3 class="mt-0">Culminating</h3>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                {{/if}}
+
             </div>
-            <div class="navbar-fixed-bottom text-center text-capitalize scroll-down">
+            <div class="navbar-fixed-bottom text-center text-capitalize scroll-down hidden-xs">
                 <p>Scroll Down</p>
                 <div class="bounce arrow"></div>
             </div>
