--- a/production/imports/ui/pages/dashboard.html
+++ b/production/imports/ui/pages/dashboard.html
@@ -319,7 +319,7 @@
             <div class="col-lg-12">
                 <h2>Organizations</h2>
             </div>
-            <div hidden>
+            <div>
                 <div class="col-lg-6">
                     <h5>Names</h5>
                     <textarea id="courseNames"></textarea>
