general courses improvment

--- a/production/imports/ui/pages/course.html
+++ b/production/imports/ui/pages/course.html
@@ -50,19 +50,19 @@
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-6">
                             <div class="section-card">
-                                <canvas id="thinkingChart"></canvas>
+                                <canvas id="thinkingChart" width="400" height="400"></canvas>
                                 <h3>Thinking</h3>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-6">
                             <div class="section-card">
-                                <canvas id="communicationChart"></canvas>
+                                <canvas id="communicationChart" width="400" height="400"></canvas>
                                 <h3>Communication</h3>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-6">
                             <div class="section-card">
-                                <canvas id="applicationChart"></canvas>
+                                <canvas id="applicationChart" width="400" height="400"></canvas>
                                 <h3>Application</h3>
                             </div>
                         </div>
@@ -70,7 +70,7 @@
                     <div class="row">
                         <div class="col-md-12 col-sm-12 col-xs-12">
                             <div class="section-card">
-                                <h2 class="performance-mark">30%</h2>
+                                <h2 class="performance-mark">{{culminating}}</h2>
                                 <h3 class="mt-0">Culminating</h3>
                             </div>
                         </div>
