implemented mark timeline

--- a/production/imports/ui/pages/course.html
+++ b/production/imports/ui/pages/course.html
@@ -179,7 +179,7 @@
                     <div class="col-md-12">
                         <div class="assessment-body text-center">
                             <div class="chart-content">
-                                <h3>Mark by Assignment Polygraph</h3>
+                                <h3>Mark Timeline</h3>
                                 <canvas id="markByAssignment"></canvas>
                             </div>
                         </div>
