--- a/production/imports/ui/pages/stream.html
+++ b/production/imports/ui/pages/stream.html
@@ -78,7 +78,7 @@
                         </div>
                     {{/ if}}
                 {{else}}
-                    <h2>There are no announcements today! :^)</h2>
+                    <h2 class="text-center">There are no announcements today! :^)</h2>
                 {{/ each}}
             </div>
         </div>
