--- a/production/imports/ui/pages/firstTime.html
+++ b/production/imports/ui/pages/firstTime.html
@@ -1,6 +1,6 @@
 <template name="firstTime">
     <div class="image-container full-height" style="background-image: url('/img/home-bg.jpg')">
-        {{#if isInRole 'teacher'}}
+        {{#if isInRole 'student'}}
             <div class="container">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
