--- a/production/imports/ui/pages/login.html
+++ b/production/imports/ui/pages/login.html
@@ -26,7 +26,7 @@
             <div class="login-with-google">
                 <h1 class="mb-30">Login</h1>
                 <a class="btn btn-primary btn-lg btn-login ptb-30" id="googleLogin" href="">
-                    <i class="fa fa-fw fa-2x fa-google" aria-hidden="true"></i> Login with YRDSB Gapps Account
+                    <i class="fa fa-fw fa-2x fa-google" aria-hidden="true"></i> Login Now
                 </a>
             </div>
 
