implementing i18n in UI

--- a/production/imports/ui/pages/bigPicture.html
+++ b/production/imports/ui/pages/bigPicture.html
@@ -19,7 +19,7 @@
 <template name="bottomBar">
     <nav class="navbar-fixed-bottom bottom-bar">
         <div class="bottom-inner">
-            <h2><span id="clock"></span> - <span id="rotatingMessage">All visitors please report to main office! ;; 请所有来访者先来总办公室报到</span></h2>
+            <h2><span id="clock"></span> - <span id="rotatingMessage">All visitors please report to main office!</span></h2>
         </div>
 
     </nav>
