--- a/production/imports/ui/pages/details.html
+++ b/production/imports/ui/pages/details.html
@@ -6,7 +6,7 @@
                 <h1>{{postSubtitle}}</h1>
             </div>
             <div class="navbar-fixed-bottom text-center text-capitalize scroll-down">
-                <p>Scroll Down</p>
+                <p>{{_ "details.scroll"}}</p>
                 <div class="bounce arrow"></div>
             </div>
         </div>
@@ -18,11 +18,11 @@
                     </div>
                     <div>
                         <span class="name">{{name}}</span>
-                        <span class="description">The Co-creator of UHS Life</span>
+                        <span class="description">{{tagline}}</span>
                     </div>
                 </div>
                 <div class="other-info">
-                    <span class="name">Posted: July 29th, 2017</span>
+                    <span class="name">{{_ "details.poseted_date"}}: July 29th, 2017</span>
                     <span>Tags:
                         {{postTags}}
                     </span>
@@ -30,37 +30,9 @@
             </div>
             <div class="post-text mt-30">
                 {{{postBody}}}
-                <!--<h2>This is a title - This block experiments with href links and unordered list</h2>
-                <p>Lorem ipsum dolor sit amet, <a href="/">consectetur adipisicing elit.</a> A culpa deserunt ducimus eligendi, excepturi fugit illo nam nesciunt non numquam odit pariatur quae qui repellendus tenetur. Assumenda autem quas veritatis.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cumque deserunt eligendi exercitationem, harum impedit labore libero optio perspiciatis quas quisquam ut? Distinctio, dolore, sequi. Earum explicabo, nihil? Commodi, veritatis?</p>
-                <ul>
-                    <li>List Item 1</li>
-                    <li>List Item 2</li>
-                    <li>List Item 3</li>
-                    <li>List Item 4</li>
-                    <li>List Item 5</li>
-                </ul>
-                <h2>This block experiments with blockquotes and ordered lists.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A culpa deserunt ducimus eligendi, excepturi fugit illo nam nesciunt non numquam odit pariatur quae qui repellendus tenetur. Assumenda autem quas veritatis.</p>
-                <ol>
-                    <li>List Item 1</li>
-                    <li>List Item 2</li>
-                    <li>List Item 3</li>
-                    <li>List Item 4</li>
-                    <li>List Item 5</li>
-                </ol>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cumque deserunt eligendi exercitationem, harum impedit labore libero optio perspiciatis quas quisquam ut? Distinctio, dolore, sequi. Earum explicabo, nihil? Commodi, veritatis?</p>
-                <blockquote>This is an experiment of a block quote. The number one rule of fight club is you do not talk about fight club.</blockquote>
-                <h2>This is an image test block</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A culpa deserunt ducimus eligendi, excepturi fugit illo nam nesciunt non numquam odit pariatur quae qui repellendus tenetur. Assumenda autem quas veritatis.</p>
-                <div class="img-container">
-                    <img class="img-responsive" src="/img/test.jpg">
-                    <p class="img-caption text-capitalize">Credit: Some random dude on Unsplash</p>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cumque deserunt eligendi exercitationem, harum impedit labore libero optio perspiciatis quas quisquam ut? Distinctio, dolore, sequi. Earum explicabo, nihil? Commodi, veritatis?</p>-->
             </div>
         </div>
-        <div class="container post-after mb-60">
+<!--        <div class="container post-after mb-60">
             <div class="credit-info mb-30">
                 <span>This is where all the credit info will go. Including bibliography and citations.</span>
             </div>
@@ -68,7 +40,7 @@
             <div class="recommendation">
                 <h2 class="mb-15 text-center text-capitalize">Further Reading</h2>
                 <div class="row">
-                    <!-- I guess we can go for a carousel here -->
+                    &lt;!&ndash; I guess we can go for a carousel here &ndash;&gt;
                     <div class="col-md-3">
                         <div class="recommend-card">
                             <img class="img-responsive" src="/img/test.jpg" />
@@ -107,11 +79,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <footer class="text-center">
             <div class="container">
-                <h3>uhs.life</h3>
-                <p>Built by students, for everyone.</p>
+                <h3>{{_ "branding"}}</h3>
+                <p>{{_ "tagline"}}</p>
             </div>
         </footer>
     </div>
